[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.42",
    "werkzeug>=3.1.3",
    "qrcode[pil]>=8.2",
    "schedule>=1.2.2",
    "pytz>=2025.2",
    "openpyxl>=3.1.5",
    "reportlab>=4.4.3",
    "opencv-python-headless>=4.11.0.86",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.7.1",
]
